@@ -95,28 +95,29 @@ class RenderChain(Component):
             return self._renderer_for_card_type[card_type]            
 
     def render_question(self, card, **render_args):
-        fields = card.fact_view.q_fields
+        fact_keys = card.fact_view.q_fields
         decorators = card.fact_view.q_field_decorators
-        return self._render_fields(card, fields, decorators, **render_args)
+        return self._render_fields(card, fact_keys, decorators, **render_args)
     
     def render_answer(self, card, **render_args):
-        fields = card.fact_view.a_fields
+        fact_keys = card.fact_view.a_fields
         decorators = card.fact_view.a_field_decorators
-        return self._render_fields(card, fields, decorators, **render_args)
+        return self._render_fields(card, fact_keys, decorators, **render_args)
     
-    def _render_fields(self, card, fields, decorators, **render_args):
+    def _render_fields(self, card, fact_keys, decorators, **render_args):
         # Note that the filters run only on the data, not on the full content
         # generated by the renderer, which would be much slower.
         data = copy.copy(card.card_type.fact_data(card))
-        for field in fields:
-            if field not in data:  # Optional field.
+        for fact_key in fact_keys:
+            if fact_key not in data:  # Optional field.
                 continue
             for filter in self._filters:
-                data[field] = filter.run(data[field], **render_args)
-            if field in decorators:
-                data[field] = \
-                    string.Template(decorators[field]).safe_substitute(data)
+                data[fact_key] = \
+                    filter.run(data[fact_key], card, fact_key, **render_args)
+            if fact_key in decorators:
+                data[fact_key] = \
+                    string.Template(decorators[fact_key]).safe_substitute(data)
         renderer = self.renderer_for_card_type(card.card_type)
-        return renderer.render_fields(data, fields,
+        return renderer.render_fields(data, fact_keys,
             card.card_type, **render_args)
 
